# gaussfree

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg
.github/workflows/: deploy_gh_pages.yml  testing.yml  unittest.yml
_autosummary/: gaussfree.distributions.beta.get_unimodal_beta.html  gaussfree.distributions.beta.html  gaussfree.distributions.html  gaussfree.estimation.binomial.EstimateBinomialP.html  gaussfree.estimation.binomial.html  gaussfree.estimation.html  gaussfree.html
_modules/: index.html
_modules/gaussfree/distributions/: beta.html
_modules/gaussfree/estimation/: binomial.html
_sources/_autosummary/: gaussfree.distributions.beta.get_unimodal_beta.rst.txt  gaussfree.distributions.rst.txt  gaussfree.estimation.binomial.rst.txt  gaussfree.estimation.rst.txt  gaussfree.rst.txt
docs/source/: conf.py  index.rst  readme.rst
docs/source/_autosummary/: gaussfree.distributions.beta.rst  gaussfree.distributions.rst  gaussfree.distributions.tests.rst  gaussfree.distributions.tests.test_beta.TestUnimodalBeta.rst  gaussfree.distributions.tests.test_beta.rst  gaussfree.estimation.binomial.EstimateBinomialP.rst  gaussfree.estimation.rst  gaussfree.estimation.tests.rst  gaussfree.estimation.tests.test_binomial_p.TestBinomialP.rst  gaussfree.estimation.tests.test_binomial_p.rst  gaussfree.rst
src/gaussfree/distributions/: beta.py
src/gaussfree/distributions/tests/: test_beta.py
src/gaussfree/estimation/: binomial.py
unittests/: test_beta.py  test_binomial_p.py
