[metadata]
name = gaussfree
version = 0.1.0
description = Tools for non-Gaussian statistics.
long_description = file: README.md
long_description_content_type = text/markdown
author = Konstantinos Kovlakas
author_email = kkovla@gmail.com
license = MIT
keywords = Statistics, non-Gaussian, Python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
url = https://github.com/kkovlakas/gaussfree
project_urls =
    Documentation = https://kkovlakas.github.io/gaussfree/
    Source Code = https://github.com/kkovlakas/gaussfree

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    numpy>=1.15
    matplotlib>=3.3
    scipy>=1.5

[options.packages.find]
where = src